Metaprogramming/Antrl/Capl_grammar/capl-g4/gen/CaplParser.java
// Generated from D:/Projects/dotNET/appDev-NET/Metaprogramming/Antrl/Capl_grammar/capl-g4/grammar\Capl.g4 by ANTLR 4.9.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CaplParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		StopMeasurement=1, Start=2, ErrorFrame=3, Key=4, On=5, Variables=6, Break=7, 
		Case=8, Char=9, Byte=10, Continue=11, Default=12, Do=13, Double=14, Else=15, 
		Float=16, For=17, If=18, Int=19, Word=20, Dword=21, Message=22, EnvVar=23, 
		Timer=24, MsTimer=25, Long=26, Int64=27, Return=28, Switch=29, Void=30, 
		While=31, LeftParen=32, RightParen=33, LeftBracket=34, RightBracket=35, 
		LeftBrace=36, RightBrace=37, Less=38, LessEqual=39, Greater=40, GreaterEqual=41, 
		LeftShift=42, RightShift=43, Plus=44, PlusPlus=45, Minus=46, MinusMinus=47, 
		Div=48, Mod=49, And=50, Or=51, AndAnd=52, OrOr=53, Caret=54, Not=55, Tilde=56, 
		Question=57, Colon=58, Semi=59, Comma=60, Assign=61, StarAssign=62, DivAssign=63, 
		ModAssign=64, PlusAssign=65, MinusAssign=66, LeftShiftAssign=67, RightShiftAssign=68, 
		AndAssign=69, XorAssign=70, OrAssign=71, Star=72, Equal=73, NotEqual=74, 
		Ellipsis=75, KeyIdentifier=76, Quote=77, Identifier=78, This=79, Dot=80, 
		Constant=81, DigitSequence=82, StringLiteral=83, Whitespace=84, Newline=85, 
		BlockComment=86, LineComment=87;
	public static final int
		RULE_primaryExpression = 0, RULE_startBlock = 1, RULE_variableBlock = 2, 
		RULE_eventBlock = 3, RULE_timerBlock = 4, RULE_errorFrame = 5, RULE_messageBlock = 6, 
		RULE_stopMeasurement = 7, RULE_envBlock = 8, RULE_postfixExpression = 9, 
		RULE_argumentExpressionList = 10, RULE_unaryExpression = 11, RULE_unaryOperator = 12, 
		RULE_castExpression = 13, RULE_multiplicativeExpression = 14, RULE_additiveExpression = 15, 
		RULE_shiftExpression = 16, RULE_relationalExpression = 17, RULE_equalityExpression = 18, 
		RULE_andExpression = 19, RULE_exclusiveOrExpression = 20, RULE_inclusiveOrExpression = 21, 
		RULE_logicalAndExpression = 22, RULE_logicalOrExpression = 23, RULE_conditionalExpression = 24, 
		RULE_assignmentExpression = 25, RULE_assignmentOperator = 26, RULE_expression = 27, 
		RULE_constantExpression = 28, RULE_declaration = 29, RULE_declarationSpecifiers = 30, 
		RULE_declarationSpecifiers2 = 31, RULE_declarationSpecifier = 32, RULE_initDeclaratorList = 33, 
		RULE_initDeclarator = 34, RULE_typeSpecifier = 35, RULE_messageType = 36, 
		RULE_messageIdentifier = 37, RULE_specifierQualifierList = 38, RULE_declarator = 39, 
		RULE_directDeclarator = 40, RULE_nestedParenthesesBlock = 41, RULE_parameterTypeList = 42, 
		RULE_parameterList = 43, RULE_parameterDeclaration = 44, RULE_identifierList = 45, 
		RULE_typeName = 46, RULE_abstractDeclarator = 47, RULE_directAbstractDeclarator = 48, 
		RULE_initializer = 49, RULE_initializerList = 50, RULE_designation = 51, 
		RULE_designatorList = 52, RULE_designator = 53, RULE_statement = 54, RULE_labeledStatement = 55, 
		RULE_compoundStatement = 56, RULE_blockItemList = 57, RULE_blockItem = 58, 
		RULE_expressionStatement = 59, RULE_selectionStatement = 60, RULE_iterationStatement = 61, 
		RULE_forCondition = 62, RULE_forDeclaration = 63, RULE_forExpression = 64, 
		RULE_jumpStatement = 65, RULE_compilationUnit = 66, RULE_translationUnit = 67, 
		RULE_externalDeclaration = 68, RULE_functionDefinition = 69, RULE_declarationList = 70;
	private static String[] makeRuleNames() {
		return new String[] {
			"primaryExpression", "startBlock", "variableBlock", "eventBlock", "timerBlock", 
			"errorFrame", "messageBlock", "stopMeasurement", "envBlock", "postfixExpression", 
			"argumentExpressionList", "unaryExpression", "unaryOperator", "castExpression", 
			"multiplicativeExpression", "additiveExpression", "shiftExpression", 
			"relationalExpression", "equalityExpression", "andExpression", "exclusiveOrExpression", 
			"inclusiveOrExpression", "logicalAndExpression", "logicalOrExpression", 
			"conditionalExpression", "assignmentExpression", "assignmentOperator", 
			"expression", "constantExpression", "declaration", "declarationSpecifiers", 
			"declarationSpecifiers2", "declarationSpecifier", "initDeclaratorList", 
			"initDeclarator", "typeSpecifier", "messageType", "messageIdentifier", 
			"specifierQualifierList", "declarator", "directDeclarator", "nestedParenthesesBlock", 
			"parameterTypeList", "parameterList", "parameterDeclaration", "identifierList", 
			"typeName", "abstractDeclarator", "directAbstractDeclarator", "initializer", 
			"initializerList", "designation", "designatorList", "designator", "statement", 
			"labeledStatement", "compoundStatement", "blockItemList", "blockItem", 
			"expressionStatement", "selectionStatement", "iterationStatement", "forCondition", 
			"forDeclaration", "forExpression", "jumpStatement", "compilationUnit", 
			"translationUnit", "externalDeclaration", "functionDefinition", "declarationList"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'stopMeasurement'", "'start'", "'errorFrame'", "'key'", "'on'", 
			"'variables'", "'break'", "'case'", "'char'", "'byte'", "'continue'", 
			"'default'", "'do'", "'double'", "'else'", "'float'", "'for'", "'if'", 
			"'int'", "'word'", "'dword'", "'message'", "'envVar'", "'timer'", "'msTimer'", 
			"'long'", "'int64'", "'return'", "'switch'", "'void'", "'while'", "'('", 
			"')'", "'['", "']'", "'{'", "'}'", "'<'", "'<='", "'>'", "'>='", "'<<'", 
			"'>>'", "'+'", "'++'", "'-'", "'--'", "'/'", "'%'", "'&'", "'|'", "'&&'", 
			"'||'", "'^'", "'!'", "'~'", "'?'", "':'", "';'", "','", "'='", "'*='", 
			"'/='", "'%='", "'+='", "'-='", "'<<='", "'>>='", "'&='", "'^='", "'|='", 
			"'*'", "'=='", "'!='", "'...'", null, "'''", null, "'this'", "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "StopMeasurement", "Start", "ErrorFrame", "Key", "On", "Variables", 
			"Break", "Case", "Char", "Byte", "Continue", "Default", "Do", "Double", 
			"Else", "Float", "For", "If", "Int", "Word", "Dword", "Message", "EnvVar", 
			"Timer", "MsTimer", "Long", "Int64", "Return", "Switch", "Void", "While", 
			"LeftParen", "RightParen", "LeftBracket", "RightBracket", "LeftBrace", 
			"RightBrace", "Less", "LessEqual", "Greater", "GreaterEqual", "LeftShift", 
			"RightShift", "Plus", "PlusPlus", "Minus", "MinusMinus", "Div", "Mod", 
			"And", "Or", "AndAnd", "OrOr", "Caret", "Not", "Tilde", "Question", "Colon", 
			"Semi", "Comma", "Assign", "StarAssign", "DivAssign", "ModAssign", "PlusAssign", 
			"MinusAssign", "LeftShiftAssign", "RightShiftAssign", "AndAssign", "XorAssign", 
			"OrAssign", "Star", "Equal", "NotEqual", "Ellipsis", "KeyIdentifier", 
			"Quote", "Identifier", "This", "Dot", "Constant", "DigitSequence", "StringLiteral", 
			"Whitespace", "Newline", "BlockComment", "LineComment"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Capl.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CaplParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class PrimaryExpressionContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(CaplParser.Identifier, 0); }
		public TerminalNode Constant() { return getToken(CaplParser.Constant, 0); }
		public List<TerminalNode> StringLiteral() { return getTokens(CaplParser.StringLiteral); }
		public TerminalNode StringLiteral(int i) {
			return getToken(CaplParser.StringLiteral, i);
		}
		public TerminalNode LeftParen() { return getToken(CaplParser.LeftParen, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RightParen() { return getToken(CaplParser.RightParen, 0); }
		public CompoundStatementContext compoundStatement() {
			return getRuleContext(CompoundStatementContext.class,0);
		}
		public List<VariableBlockContext> variableBlock() {
			return getRuleContexts(VariableBlockContext.class);
		}
		public VariableBlockContext variableBlock(int i) {
			return getRuleContext(VariableBlockContext.class,i);
		}
		public List<EventBlockContext> eventBlock() {
			return getRuleContexts(EventBlockContext.class);
		}
		public EventBlockContext eventBlock(int i) {
			return getRuleContext(EventBlockContext.class,i);
		}
		public List<TimerBlockContext> timerBlock() {
			return getRuleContexts(TimerBlockContext.class);
		}
		public TimerBlockContext timerBlock(int i) {
			return getRuleContext(TimerBlockContext.class,i);
		}
		public List<ErrorFrameContext> errorFrame() {
			return getRuleContexts(ErrorFrameContext.class);
		}
		public ErrorFrameContext errorFrame(int i) {
			return getRuleContext(ErrorFrameContext.class,i);
		}
		public List<EnvBlockContext> envBlock() {
			return getRuleContexts(EnvBlockContext.class);
		}
		public EnvBlockContext envBlock(int i) {
			return getRuleContext(EnvBlockContext.class,i);
		}
		public List<FunctionDefinitionContext> functionDefinition() {
			return getRuleContexts(FunctionDefinitionContext.class);
		}
		public FunctionDefinitionContext functionDefinition(int i) {
			return getRuleContext(FunctionDefinitionContext.class,i);
		}
		public List<StartBlockContext> startBlock() {
			return getRuleContexts(StartBlockContext.class);
		}
		public StartBlockContext startBlock(int i) {
			return getRuleContext(StartBlockContext.class,i);
		}
		public List<MessageBlockContext> messageBlock() {
			return getRuleContexts(MessageBlockContext.class);
		}
		public MessageBlockContext messageBlock(int i) {
			return getRuleContext(MessageBlockContext.class,i);
		}
		public List<StopMeasurementContext> stopMeasurement() {
			return getRuleContexts(StopMeasurementContext.class);
		}
		public StopMeasurementContext stopMeasurement(int i) {
			return getRuleContext(StopMeasurementContext.class,i);
		}
		public PrimaryExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primaryExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CaplListener ) ((CaplListener)listener).enterPrimaryExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CaplListener ) ((CaplListener)listener).exitPrimaryExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CaplVisitor ) return ((CaplVisitor<? extends T>)visitor).visitPrimaryExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrimaryExpressionContext primaryExpression() throws RecognitionException {
		PrimaryExpressionContext _localctx = new PrimaryExpressionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_primaryExpression);
		int _la;
		try {
			int _alt;
			setState(171);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(142);
				match(Identifier);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(143);
				match(Constant);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(145); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(144);
					match(StringLiteral);
					}
					}
					setState(147); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==StringLiteral );
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(149);
				match(LeftParen);
				setState(150);
				expression();
				setState(151);
				match(RightParen);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(153);
				match(LeftParen);
				setState(154);
				compoundStatement();
				setState(155);
				match(RightParen);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(168);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						setState(166);
						_errHandler.sync(this);
						switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
						case 1:
							{
							setState(157);
							variableBlock();
							}
							break;
						case 2:
							{
							setState(158);
							eventBlock();
							}
							break;
						case 3:
							{
							setState(159);
							timerBlock();
							}
							break;
						case 4:
							{
							setState(160);
							errorFrame();
							}
							break;
						case 5:
							{
							setState(161);
							envBlock();
							}
							break;
						case 6:
							{
							setState(162);
							functionDefinition();
							}
							break;
						case 7:
							{
							setState(163);
							startBlock();
							}
							break;
						case 8:
							{
							setState(164);
							messageBlock();
							}
							break;
						case 9:
							{
							setState(165);
							stopMeasurement();
							}
							break;
						}
						} 
					}
					setState(170);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StartBlockContext extends ParserRuleContext {
		public TerminalNode On() { return getToken(CaplParser.On, 0); }
		public TerminalNode Start() { return getToken(CaplParser.Start, 0); }
		public TerminalNode LeftBrace() { return getToken(CaplParser.LeftBrace, 0); }
		public TerminalNode RightBrace() { return getToken(CaplParser.RightBrace, 0); }
		public BlockItemListContext blockItemList() {
			return getRuleContext(BlockItemListContext.class,0);
		}
		public StartBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_startBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CaplListener ) ((CaplListener)listener).enterStartBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CaplListener ) ((CaplListener)listener).exitStartBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CaplVisitor ) return ((CaplVisitor<? extends T>)visitor).visitStartBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartBlockContext startBlock() throws RecognitionException {
		StartBlockContext _localctx = new StartBlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_startBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(173);
			match(On);
			setState(174);
			match(Start);
			setState(175);
			match(LeftBrace);
			setState(177);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << On) | (1L << Variables) | (1L << Break) | (1L << Case) | (1L << Char) | (1L << Byte) | (1L << Continue) | (1L << Default) | (1L << Do) | (1L << Double) | (1L << Float) | (1L << For) | (1L << If) | (1L << Int) | (1L << Word) | (1L << Dword) | (1L << Message) | (1L << Timer) | (1L << MsTimer) | (1L << Long) | (1L << Int64) | (1L << Return) | (1L << Switch) | (1L << Void) | (1L << While) | (1L << LeftParen) | (1L << LeftBracket) | (1L << LeftBrace) | (1L << Less) | (1L << LessEqual) | (1L << Greater) | (1L << GreaterEqual) | (1L << LeftShift) | (1L << RightShift) | (1L << Plus) | (1L << PlusPlus) | (1L << Minus) | (1L << MinusMinus) | (1L << Div) | (1L << Mod) | (1L << And) | (1L << Or) | (1L << AndAnd) | (1L << OrOr) | (1L << Caret) | (1L << Not) | (1L << Tilde) | (1L << Question) | (1L << Semi) | (1L << Comma) | (1L << Assign) | (1L << StarAssign) | (1L << DivAssign))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (ModAssign - 64)) | (1L << (PlusAssign - 64)) | (1L << (MinusAssign - 64)) | (1L << (LeftShiftAssign - 64)) | (1L << (RightShiftAssign - 64)) | (1L << (AndAssign - 64)) | (1L << (XorAssign - 64)) | (1L << (OrAssign - 64)) | (1L << (Star - 64)) | (1L << (Equal - 64)) | (1L << (NotEqual - 64)) | (1L << (Identifier - 64)) | (1L << (Constant - 64)) | (1L << (DigitSequence - 64)) | (1L << (StringLiteral - 64)))) != 0)) {
				{
				setState(176);
				blockItemList();
				}
			}

			setState(179);
			match(RightBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableBlockContext extends ParserRuleContext {
		public TerminalNode Variables() { return getToken(CaplParser.Variables, 0); }
		public TerminalNode LeftBrace() { return getToken(CaplParser.LeftBrace, 0); }
		public TerminalNode RightBrace() { return getToken(CaplParser.RightBrace, 0); }
		public BlockItemListContext blockItemList() {
			return getRuleContext(BlockItemListContext.class,0);
		}
		public VariableBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CaplListener ) ((CaplListener)listener).enterVariableBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CaplListener ) ((CaplListener)listener).exitVariableBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CaplVisitor ) return ((CaplVisitor<? extends T>)visitor).visitVariableBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableBlockContext variableBlock() throws RecognitionException {
		VariableBlockContext _localctx = new VariableBlockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_variableBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(181);
			match(Variables);
			setState(182);
			match(LeftBrace);
			setState(184);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << On) | (1L << Variables) | (1L << Break) | (1L << Case) | (1L << Char) | (1L << Byte) | (1L << Continue) | (1L << Default) | (1L << Do) | (1L << Double) | (1L << Float) | (1L << For) | (1L << If) | (1L << Int) | (1L << Word) | (1L << Dword) | (1L << Message) | (1L << Timer) | (1L << MsTimer) | (1L << Long) | (1L << Int64) | (1L << Return) | (1L << Switch) | (1L << Void) | (1L << While) | (1L << LeftParen) | (1L << LeftBracket) | (1L << LeftBrace) | (1L << Less) | (1L << LessEqual) | (1L << Greater) | (1L << GreaterEqual) | (1L << LeftShift) | (1L << RightShift) | (1L << Plus) | (1L << PlusPlus) | (1L << Minus) | (1L << MinusMinus) | (1L << Div) | (1L << Mod) | (1L << And) | (1L << Or) | (1L << AndAnd) | (1L << OrOr) | (1L << Caret) | (1L << Not) | (1L << Tilde) | (1L << Question) | (1L << Semi) | (1L << Comma) | (1L << Assign) | (1L << StarAssign) | (1L << DivAssign))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (ModAssign - 64)) | (1L << (PlusAssign - 64)) | (1L << (MinusAssign - 64)) | (1L << (LeftShiftAssign - 64)) | (1L << (RightShiftAssign - 64)) | (1L << (AndAssign - 64)) | (1L << (XorAssign - 64)) | (1L << (OrAssign - 64)) | (1L << (Star - 64)) | (1L << (Equal - 64)) | (1L << (NotEqual - 64)) | (1L << (Identifier - 64)) | (1L << (Constant - 64)) | (1L << (DigitSequence - 64)) | (1L << (StringLiteral - 64)))) != 0)) {
				{
				setState(183);
				blockItemList();
				}
			}

			setState(186);
			match(RightBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EventBlockContext extends ParserRuleContext {
		public TerminalNode On() { return getToken(CaplParser.On, 0); }
		public TerminalNode Key() { return getToken(CaplParser.Key, 0); }
		public TerminalNode KeyIdentifier() { return getToken(CaplParser.KeyIdentifier, 0); }
		public TerminalNode LeftBrace() { return getToken(CaplParser.LeftBrace, 0); }
		public TerminalNode RightBrace() { return getToken(CaplParser.RightBrace, 0); }
		public BlockItemListContext blockItemList() {
			return getRuleContext(BlockItemListContext.class,0);
		}
		public EventBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eventBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CaplListener ) ((CaplListener)listener).enterEventBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CaplListener ) ((CaplListener)listener).exitEventBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CaplVisitor ) return ((CaplVisitor<? extends T>)visitor).visitEventBlock(this);
			else return visitor.visitChildren(this);
		}
	}
